<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Otter Enrichment</string>
    <string name="checking_connection">Checking connection…</string>
    <string name="sd_usage_placeholder">SD Card: --% used</string>
    <string name="power_firmware">Power and Firmware</string>
    <string name="enter_sleep_mode">Enter Sleep Mode</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="data_collection">Data Collection</string>
    <string name="duration_label">Duration:</string>
    <string name="start_data_collection">Start Data Collection</string>
    <string name="collecting_data">Collecting data…</string>
    <string name="file_management">File Management</string>
    <string name="list_files">List Files</string>
    <string name="delete_files">Delete Files</string>
    <string name="refresh">Refresh</string>
    <string name="delete_selected">Delete Selected</string>

    <!-- Tutorial -->>
    <string name="view_tutorial">View Tutorial</string>

    <string-array name="duration_options">
        <item>1 Minute</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
    </string-array>
</resources>
